--- a/index.html
+++ b/index.html
@@ -13,17 +13,18 @@
     />
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/style.css" />
+    <link rel="icon" href="/img/icons8-галочка-16.pnggit">
   </head>
   <body>
     <header class="header content-section">
       <p class="header__title">Горизонт</p>
       <ul class="header__list">
-        <li class="header__list-item">Главная</li>
-        <li class="header__list-item">Цены</li>
-        <li class="header__list-item">О нас</li>
-        <li class="header__list-item">Продукты</li>
-        <li class="header__list-item">FAQ</li>
-        <li class="header__list-item">Контакты</li>
+        <li class="header__list-item"><a href="#">Главная</a></li>
+        <li class="header__list-item"><a href="#">Цены</a></li>
+        <li class="header__list-item"><a href="#">О нас</a></li>
+        <li class="header__list-item"><a href="#">Продукты</a></li>
+        <li class="header__list-item"><a href="#">>FAQ</a></li>
+        <li class="header__list-item"><a href="#">Контакты</a></li>
       </ul>
     </header>
     <main>
@@ -169,5 +170,25 @@
         </div>
       </section>
     </main>
+    <footer class="footer content-section">
+        <div class="footer__img"></div>
+        <ul class="footer__list">
+            <li class="footer__list_item">
+                <a href="#">Twitter</a> 
+            </li>
+            <li class="footer__list_item">
+                <a href="#">Facebook</a>
+            </li>
+            <li class="footer__list_item">
+                <a href="#">Instagram</a>
+            </li>
+            <li class="footer__list_item">
+                <a href="#">YouTube</a>
+            </li>
+        </ul>
+        <h3 class="footer__dev">
+            Design by <span>Evgeniy</span>
+        </h3>
+    </footer>
   </body>
 </html>
