--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     />
     <link rel="stylesheet" href="/global.css" />
     <link rel="stylesheet" href="/style.css" />
-    <link rel="icon" href="/img/icons8-галочка-16.pnggit">
+    <link rel="icon" href="/img/icons8-галочка-16.png">
+    <link rel="apple-touch-icon" href="/img/icons8-галочка-16.png">
   </head>
   <body>
     <header class="header content-section">
@@ -23,7 +24,7 @@
         <li class="header__list-item"><a href="#">Цены</a></li>
         <li class="header__list-item"><a href="#">О нас</a></li>
         <li class="header__list-item"><a href="#">Продукты</a></li>
-        <li class="header__list-item"><a href="#">>FAQ</a></li>
+        <li class="header__list-item"><a href="#">FAQ</a></li>
         <li class="header__list-item"><a href="#">Контакты</a></li>
       </ul>
     </header>
