--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
               <button class="price__item-card_block price__item-card_btn">Выбрать</button>
             </article>
           </li>
-          <li class="price__item">
+          <li class="price__item price__item_professional">
             <article class="price__item-card">
               <div class="price__item-card_block price__item-card_block-3">
                 <div class="price__img"><img src="/img/Medal.svg" alt=""></div>
